--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </section>
 
 <footer>
-    <p>© Md. Azhraul Islam 2022, a Programming Hero initiative.</p>
+    <p>© Habibur Rahman 2022, a Programming Hero initiative.</p>
 </footer>
 </body>
 </html>
